add change english nav

--- a/style.css
+++ b/style.css
@@ -86,7 +86,9 @@ html,
   width: 100%;
   height: 100%;
 }
-
+.swiper-wrapper {
+  height: 50%;
+}
 .swiper-slide {
   text-align: center;
   font-size: 18px;
