--- a/style.css
+++ b/style.css
@@ -119,10 +119,14 @@ html,
   padding: 33px 64px 56px 67px;
     background-color: rgba(0, 0, 0, .7);
     position: absolute;
+    opacity: 0;
     left: 0;
     right: 0;
     bottom: 0;
     z-index: 10;
+}
+.banner_content:hover {
+  opacity: .9;
 }
 .banner_text {
   max-width: 700px;
@@ -198,19 +202,23 @@ color: #EFCC70;
   object-fit: cover;
 }
 .about_us_header {
-  padding: 33px 64px 56px 67px;
+  padding: 15px 64px 15px 67px;
   background-color: rgba(0, 0, 0, .7);
   position: absolute;
   left: 0;
   right: 0;
   bottom: 100;
+  opacity: .1;
   z-index: 10;
+}
+.about_us_header:hover {
+  opacity: .9;
 }
 .about_us_text {
   max-width: 100%;
   text-align: center;
   font-size: 24px;
-  line-height: 40px;
+  line-height: 30px;
   font-weight: 300;
   color: #fff;
 }
@@ -328,8 +336,16 @@ footer {
   color: #fff;
   width: 30px;
   height: 30px;
-  padding-right: 55px;
-  padding-bottom: 25px;
+  margin-right: 60px;
+  margin-bottom: 25px;
+  /* padding-right: 55px;
+  padding-bottom: 25px; */
+}
+.social_icon:hover {
+  border-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0px 0px 30px#fff;
+  color: #fff;
 }
 .lang_list_footer {
   display: flex;
