--- a/style.css
+++ b/style.css
@@ -180,20 +180,6 @@ color: #EFCC70;
   padding-top: 20px;
   padding-bottom: 20px;
   background: #000;
-
-  /* Center slide text vertically */
-  /* display: -webkit-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  -webkit-justify-content: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center; */
 }
 .slide_movie iframe {
   display: block;
@@ -382,7 +368,7 @@ footer {
   align-items: center;
   z-index: 11;
   
-  /* display: none; */
+  display: none;
 }
 .popups_inner.active {
   display: flex;
