--- a/style.css
+++ b/style.css
@@ -1,11 +1,15 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 body {
-max-width: 1445px;
-max-height: 4000px;
+max-width: 100%;
+max-height: 100%;
 margin: 0;
 padding: 0;
 }
 .page {
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
 }
 header {
