--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ header {
   height: 100px;
   background-color: #014743;
 }
-svg {
+.logo_svg {
   width: 100px;
   height: 100px;
   /* fill: yellow;  */
@@ -770,13 +770,13 @@ footer {
   position: relative;
   border: 4px solid #000;
 }
-.close_popup {
+.close_popup svg {
   position: absolute;
-  top: 9px;
-  right: 22px;
-  font-size: 37px;
+  top: 15px;
+  right: 15px;
   color: #EFCC70;
   cursor: pointer;
+  width: 40px;
 }
 .close_popup:hover {
   color: rgb(204, 168, 245);
@@ -811,4 +811,7 @@ input {
   background-color: #23f;
   color: #fff;
   box-shadow: 0px 0px 30px #fff;
+}
+.closed_icon {
+  background-color: #014743;
 }
