--- a/style.css
+++ b/style.css
@@ -69,6 +69,68 @@ header {
 .lang_link:hover {
   color: coral;
 }
+
+
+/* Burgermenu */
+
+.hamb {
+  display: none;
+}
+.bar {
+  display: block;
+  width: 25px;
+  height: 3px;
+  margin: 5px auto;
+  transition: 0.3s;
+  background-color: #EFCC70;
+}
+
+@media screen and (max-width: 768px) {
+  
+  .nav_list {
+    position: fixed;
+    flex-direction: column;
+    background-color: #EFCC70;
+
+    width: 50%;
+    height: 100%;
+    text-align: center;
+    transition: 0.3s;
+    box-shadow: 0 10px 27px rgba(0, 0, 0, 0.5);
+    left: -100%;
+    top: 20px;
+    z-index: 20;
+  }
+  .nav_list.active {
+    left: 0;
+  }
+  .nav_item {
+    margin: 25px 0;
+  }
+  .nav_link {
+    color: #014743;
+    font-weight: 900;
+  }
+  .nav_link:hover {
+    color: rgb(238, 91, 6);
+  }
+  .hamb {
+    display: block;
+    cursor: pointer;
+    padding-right: 25px;
+  }
+
+  .hamb.active .bar:nth-child(2) {
+    opacity: 0;
+  }
+  .hamb.active .bar:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+  }
+  .hamb.active .bar:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
+  }
+
+}
 /*Swiper*/
 
 html,
