--- a/style.css
+++ b/style.css
@@ -73,63 +73,108 @@ header {
 
 /* Burgermenu */
 
-.hamb {
-  display: none;
+#menu_toggle {
+  opacity: 0;
 }
-.bar {
-  display: block;
-  width: 25px;
-  height: 3px;
-  margin: 5px auto;
-  transition: 0.3s;
-  background-color: #EFCC70;
-}
-
 @media screen and (max-width: 768px) {
-  
-  .nav_list {
-    position: fixed;
-    flex-direction: column;
-    background-color: #EFCC70;
 
-    width: 50%;
-    height: 100%;
-    text-align: center;
-    transition: 0.3s;
-    box-shadow: 0 10px 27px rgba(0, 0, 0, 0.5);
-    left: -100%;
-    top: 20px;
-    z-index: 20;
+  
+  #menu_toggle:checked ~ .menu_btn > span {
+    transform: rotate(45deg);
   }
-  .nav_list.active {
+  #menu_toggle:checked ~ .menu_btn > span::before {
+    top: 0;
+    transform: rotate(0);
+  }
+  #menu_toggle:checked ~ .menu_btn > span::after {
+    top: 0;
+    transform: rotate(90deg);
+  }
+  #menu_toggle:checked ~ .nav_list {
+    visibility: visible;
     left: 0;
   }
+  
+  .menu_btn {
+    display: flex;
+    align-items: center;
+    position: fixed;
+    top: 20px;
+    left: 20px;
+  
+    width: 26px;
+    height: 26px;
+  
+    cursor: pointer;
+    z-index: 21;
+  }
+  
+  .menu_btn > span,
+  .menu_btn > span::before,
+  .menu_btn > span::after {
+    display: block;
+    position: absolute;
+  
+    width: 100%;
+    height: 2px;
+  
+    background-color: #EFCC70;
+  
+    transition-duration: .25s;
+  }
+  .menu_btn > span::before {
+    content: '';
+    top: -8px;
+  }
+  .menu_btn > span::after {
+    content: '';
+    top: 8px;
+  }
+  
+  
+  .nav_list {
+    display: block;
+    position: fixed;
+    visibility: hidden;
+    top: 0;
+    left: -100%;
+  
+    width: 300px;
+    height: 100%;
+  
+    margin: 0;
+    padding: 80px 0;
+  
+    list-style: none;
+  
+    background-color: #014743;
+    box-shadow: 1px 0px 6px ;
+    z-index: 20;
+    transition-duration: .25s;
+  }
   .nav_item {
-    margin: 25px 0;
+    display: block;
+    padding: 12px 24px;
+  
+    color: #EFCC70;
+  
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    font-weight: 600;
+  
+    text-decoration: none;
+  
+    transition-duration: .25s;
+  }
+  .nav_item:hover {
+    background-color: #014743;
   }
   .nav_link {
-    color: #014743;
-    font-weight: 900;
+    color: #EFCC70;
   }
   .nav_link:hover {
-    color: rgb(238, 91, 6);
+    color: aquamarine;
   }
-  .hamb {
-    display: block;
-    cursor: pointer;
-    padding-right: 25px;
-  }
-
-  .hamb.active .bar:nth-child(2) {
-    opacity: 0;
-  }
-  .hamb.active .bar:nth-child(1) {
-    transform: translateY(8px) rotate(45deg);
-  }
-  .hamb.active .bar:nth-child(3) {
-    transform: translateY(-8px) rotate(-45deg);
-  }
-
 }
 /*Swiper*/
 
