--- a/style.css
+++ b/style.css
@@ -278,6 +278,33 @@ color: #EFCC70;
   right: 64px;
   bottom: 40px;
 }
+
+@media screen and (max-width: 768px) {
+  .banner_text {
+    max-width: 100%;
+    font-size: 14px;
+    line-height: 30px;
+    font-weight: 300;
+    color: #fff;
+  }
+  .btn {
+    width: 180px;
+    height: 45px;
+    background-color: #EFCC70;
+    opacity: 0.8;
+    border-radius: 12px;
+    border: none;
+    cursor: pointer;
+    color: #052b2b;
+    font-weight: 800;
+    white-space: nowrap;
+    text-align: center;
+    transition: 0.2s linear;
+    font-size: 16px;
+  }
+
+}
+
 .about_us {
   position: relative;
   height: 100%;
@@ -327,6 +354,43 @@ color: #EFCC70;
   font-weight: 300;
   color: #fff;
 }
+
+@media screen and (max-width: 768px) {
+  .about_us_header {
+    padding: 14px 14px 15px 75px;
+    background-color: rgba(0, 0, 0, .7);
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 100;
+    opacity: 0;
+    z-index: 10;
+  }
+  .about_us_text {
+    max-width: 80%;
+    text-align: center;
+    font-size: 16px;
+    line-height: 25px;
+    font-weight: 300;
+    color: #fff;
+  }
+  .slide_movie {
+    height: 300px;
+    text-align: center;
+    font-size: 18px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background: #000;
+  }
+  .slide_movie iframe {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
+
+
 .deals {
   position: relative;
   height: 100%;
