--- a/style.css
+++ b/style.css
@@ -365,7 +365,7 @@ color: #EFCC70;
 @media screen and (max-width: 768px) {
   .about_us_header {
     height: 25%;
-    padding: 14px 14px 15px 75px;
+    /* padding: 14px 14px 15px 75px; */
     background-color: rgba(0, 0, 0, .7);
     position: absolute;
     left: 0;
@@ -375,7 +375,7 @@ color: #EFCC70;
     z-index: 10;
   }
   .about_us_text {
-    max-width: 70%;
+    max-width: 100%;
     text-align: center;
     font-size: 10px;
     line-height: 14px;
@@ -597,6 +597,13 @@ color: #EFCC70;
   font-size: 30px;
   margin: 0px 0px 10px 0px;
 
+}
+@media screen and (max-width: 768px){
+
+  .poup1_text iframe {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 
