--- a/style.css
+++ b/style.css
@@ -456,6 +456,27 @@ color: #EFCC70;
   line-height: 80px;
   padding-right: 80px;
 }
+@media screen and (max-width: 768px) {
+  .programs_art {
+    margin: 0;
+    padding: 0;
+    font-size: 18px;
+    color: #EFCC70;
+    line-height: 60px;
+    padding-left: 26px;
+  }
+  .price_art {
+    margin: 0;
+    padding: 0;
+    margin: 0;
+    padding: 0;
+    font-size: 18px;
+    color: #EFCC70;
+    line-height: 60px;
+    padding-right: 20px;
+  }
+  
+}
 
 /* accordion */
 .flex-container {
@@ -475,7 +496,7 @@ color: #EFCC70;
 .flex-title {
   color: #f1f1f1;
   position: relative;
-  font-size: 3vw;
+  font-size: 20px;
   margin: auto;
   text-align: center;
   transform: rotate(90deg);
@@ -496,9 +517,10 @@ color: #EFCC70;
   color: #f1f1f1;
   position: relative;
   width: 70%;
-  font-size: 2vw;
+  height: 60%;
+  font-size: 20px;
   padding: 5%;
-  top: 20%;
+  top: 15%;
   border: 2px solid #f1f1f1;
   border-radius: 10px;
   line-height: 1.3;
@@ -554,6 +576,7 @@ color: #EFCC70;
   width: 40%;
   height: 40%;
 }
+
 .popup1 {
   position: fixed;
   width: 100%;
@@ -596,8 +619,8 @@ color: #EFCC70;
 .poup1_title {
   font-size: 30px;
   margin: 0px 0px 10px 0px;
-
 }
+
 @media screen and (max-width: 768px){
 
   .poup1_text iframe {
@@ -629,7 +652,7 @@ color: #EFCC70;
 }
  @media screen and (max-width: 768px) {
 
-.flex-slide p { font-size: 2em; }
+.flex-slide p { font-size: 18px; }
 }
  @media screen and (max-width: 768px) {
 
@@ -894,8 +917,10 @@ footer {
   color: #fff;
   width: 30px;
   height: 30px;
-  margin-right: 60px;
-  margin-bottom: 25px;
+  margin-top: 50px;
+  margin-left: 85px;
+  /* margin-right: 60px;
+  margin-bottom: 25px; */
   /* padding-right: 55px;
   padding-bottom: 25px; */
 }
@@ -966,7 +991,7 @@ footer {
   margin: 0 auto;
   text-align: center;
   background-color: #014743;
-  padding: 60px 0px;
+  padding: 40px 0px;
   border-radius: 15px;
   position: relative;
   border: 4px solid #000;
@@ -995,6 +1020,11 @@ footer {
   margin-top: 10px;
   margin-bottom: 55px;
 }
+
+label.error{
+  display: none!important;
+}
+
 input {
   display: block;
   margin: 0 auto 15px;
@@ -1003,6 +1033,22 @@ input {
   border-radius: 10px;
   padding: 15px 25px;
 }
+
+form input.error{
+  border-color:red;
+}
+
+textarea {
+  display: block;
+  margin: 0 auto 15px;
+  width: 250px;
+  height: 40px;
+  border: 1px solid #000;
+  border-radius: 10px;
+  padding: 15px 25px;
+  resize: none;
+}
+
 .btn_form {
   color: #014743;
   background-color: #EFCC70;
